# ossca-2026-rltk

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  RESOURCES.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: rust.yml  sonarcloud.yml
bracket-algorithm-traits/: Cargo.toml
bracket-algorithm-traits/src/: algorithm2d.rs  algorithm3d.rs  lib.rs
bracket-bevy/: Cargo.toml
bracket-bevy/examples/: bevy_a_star_mouse.rs  bevy_benchmark.rs  bevy_benchmark_scalable.rs  bevy_dwarfmap.rs  bevy_hello_terminal.rs  bevy_resize_terminal.rs  bevy_tiles.rs
bracket-bevy/src/: context.rs  lib.rs  textblock.rs
bracket-color/: Cargo.toml
bracket-color/examples/: colors.rs  lerp.rs  lerpit.rs  lerpit_hsv.rs  named_color.rs  shades_of_grey.rs
bracket-color/src/: color_pair.rs  hsv.rs  lerpit.rs  lib.rs  named.rs  palette.rs  rgb.rs  rgba.rs
bracket-embedding/: Cargo.toml
bracket-embedding/src/: embedding.rs  lib.rs
bracket-geometry/: Cargo.toml  README.md
bracket-geometry/examples/: bresenham_circle.rs  bresenham_line.rs  bresenham_sweep.rs  ellipse.rs  vector_line.rs
bracket-geometry/src/: angle.rs  angles.rs  circle_bresenham.rs  (+11 more)
bracket-noise/: Cargo.toml
bracket-pathfinding/: Cargo.toml
bracket-random/: Cargo.toml  README.md
bracket-random/benches/: dice.rs
bracket-random/examples/: distribution.rs
bracket-random/src/: lib.rs  parsing.rs  random.rs
bracket-rex/: Cargo.toml
bracket-terminal/: Cargo.toml
src/: lib.rs
(+112 files in other folders)
