[package]
name = "bracket-random"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2024"
publish = true
description = "Random number generator (ChaCha based), focused on dice rolling. Optionally includes parsing of RPG-style dice strings (e.g. \"3d6+12\"). Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "random", "chacha", "dice"]
categories = ["game-engines", "random"]
license = "MIT"

[features]
default = [ "parsing" ]
parsing = [ "regex", "lazy_static" ]
serde = [ "serde_crate", "rand_chacha/serde" ]

[dependencies]
rand_chacha = { version = "0.10", default-features = false }
regex = { version = "1.3.6", optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde_crate = { version = "~1.0.110", features = ["derive"], optional = true, package = "serde" }
rand = { version = "0.10", default-features = false, features = [ "sys_rng" ] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.2", features = [ "wasm_js" ] }

[dev-dependencies]
criterion = "~0.8.2"
serde_json = "~1.0"

[[bench]]
name = "dice"
harness = false

[[example]]
name = "dicestring"
required-features = [ "parsing" ]

[[example]]
name = "distribution"
required-features = [ "parsing" ]
